index.html is converted to 200.html

--- a/200.html
+++ b/200.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-    I'm 200
+    Hello World!
+    Site is not ready yet, stay tuned! (from 200.html)
 </body>
 </html>
