--- a/index.html
+++ b/index.html
@@ -1,11 +1,216 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="utf-8">
+    <title>Anasayfa | BSigner</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bsigner'ın tarayıcı bağımsız ve kolay entegre edilebilir yapısı ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın.">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/flickity.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/jquery.steps.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    Hello World!
-    Site is not ready yet, stay tuned!
+    <div class="nav-container ">
+        <div class="bar bar--sm visible-xs">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3 col-md-2 logo-div">
+                        <a href="index.html">
+                            <img class="logo logo-dark" alt="logo" src="img/logo.png">
+                        </a>
+                    </div>
+                    <div class="col-9 col-md-10 text-right">
+                        <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
+                            <i class="icon icon--sm stack-interface stack-menu"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav id="menu1" class="bar bar--sm bar-1 hidden-xs ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-1 col-md-2 hidden-xs">
+                        <div class="bar__module logo-div">
+                            <a href="index.html">
+                                <img class="logo logo-dark" alt="logo" src="img/logo.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
+                        <div class="bar__module">
+                            <ul class="menu-horizontal text-left">
+                                <li>
+                                    <a href="index.html">
+                                        ANA SAYFA
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="komponent.html">
+                                        KOMPONENTLER
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="iletisim.html">
+                                        İLETİŞİM
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="main-container">
+        <section class="cover height-80 imagebg text-center parallax" data-overlay="4">
+            <div class="background-image-holder" style="background: url(&quot;img/background.jpg&quot;); opacity: 1;">
+                <img alt="background" src="img/background.jpg">
+            </div>
+            <div class="container pos-vertical-center">
+                <div class="row">
+                    <div class="col-md-8 col-lg-7">
+                        <h1>
+                            Bsigner ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın
+                        </h1>
+                        <p class="lead">
+                            Bsigner tarayıcı bağımsız, kolay entegre edilebilir bir imzalama çözümü sunar.
+                        </p>
+                        <a class="btn btn--primary type--uppercase" href="komponent.html">
+                            <span class="btn__text">
+                                Komponentler
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="elements-title space--xxs text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Laptop-Tablet icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Tarayıcı Bağımsız</h5>
+                                <p>
+                                    BSigner herhangi bir tarayıcıya bağlı kalmaksızın hepsiyle (Internet Explorer, Google Chrome, Firefox, Opera, Safari ve diğerleri) uyumlu çalışabilmektedir.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Puzzle icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Kolay Entegrasyon</h5>
+                                <p>
+                                    BSigner modülerliği ve farklı komponentleri sayesinde kolay entegre edilebilir bir yapı sunar, sizi entegrasyon süreçleri ve dokümanları ile uğraştırmaz.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Lock icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Güvenli</h5>
+                                <p>
+                                    BSigner dokümanlarınızı herhangi bir güvenlik zafiyeti oluşturmayacak şekilde imzalayarak size en güvenilir hizmeti sunar.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Timer-2 icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Hızlı</h5>
+                                <p>
+                                    BSigner en güncel teknoloji altyapılarını kullanarak dokümanlarınızı olabilecek en hızlı şekilde imzalar.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Letter-Open icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Mevzuat Uyumlu</h5>
+                                <p>
+                                    Bsigner tüm imzalama işlemlerini 5070 sayılı Elektronik İmza Kanunu'na uyumlu şekilde gerçekleştirmektedir.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="text-center space--sm footer-5  bg--dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="heading-block">
+                            <ul class="list-inline list--hover">
+                                <li>
+                                    <a href="index.html">
+                                        <span>Ana Sayfa</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="komponent.html">
+                                        <span>Komponentler</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="iletisim.html">
+                                        <span>İletişim</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span class="type--fine-print">
+                                ©
+                                <span class="update-year">2019</span> Bsigner
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <a class="back-to-top inner-link" href="#start" data-scroll-class="100vh:active">
+        <i class="stack-interface stack-up-open-big"></i>
+    </a>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/flickity.min.js"></script>
+    <script src="js/easypiechart.min.js"></script>
+    <script src="js/parallax.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/datepicker.js"></script>
+    <script src="js/isotope.min.js"></script>
+    <script src="js/ytplayer.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/granim.min.js"></script>
+    <script src="js/jquery.steps.min.js"></script>
+    <script src="js/countdown.min.js"></script>
+    <script src="js/twitterfetcher.min.js"></script>
+    <script src="js/spectragram.min.js"></script>
+    <script src="js/smooth-scroll.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
