Site v1 is completed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="nav-container ">
+    <div class="nav-container">
         <div class="bar bar--sm visible-xs">
             <div class="container">
                 <div class="row">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        <nav id="menu1" class="bar bar--sm bar-1 hidden-xs ">
+        <nav id="menu1" class="bar bar--sm bar-1 hidden-xs">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-1 col-md-2 hidden-xs">
@@ -73,8 +73,8 @@
     </div>
     <div class="main-container">
         <section class="cover height-80 imagebg text-center parallax" data-overlay="4">
-            <div class="background-image-holder" style="background: url(&quot;img/background.jpg&quot;); opacity: 1;">
-                <img alt="background" src="img/background.jpg">
+            <div class="background-image-holder" style="background: url(&quot;img/background.png&quot;); opacity: 1;">
+                <img alt="background" src="img/background.png">
             </div>
             <div class="container pos-vertical-center">
                 <div class="row">
@@ -159,7 +159,7 @@
                 </div>
             </div>
         </section>
-        <footer class="text-center space--sm footer-5  bg--dark">
+        <footer class="text-center space--sm footer-5 bg--dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
