"html" prefixes are deleted and 404 page is added

--- a/komponent.html
+++ b/komponent.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-3 col-md-2 logo-div">
-                        <a href="index.html">
+                        <a href="/">
                             <img class="logo logo-dark" alt="logo" src="img/logo.png">
                         </a>
                     </div>
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="col-lg-1 col-md-2 hidden-xs">
                         <div class="bar__module logo-div">
-                            <a href="index.html">
+                            <a href="/">
                                 <img class="logo logo-dark" alt="logo" src="img/logo.png">
                             </a>
                         </div>
@@ -50,17 +50,17 @@
                         <div class="bar__module">
                             <ul class="menu-horizontal text-left">
                                 <li>
-                                    <a href="index.html">
+                                    <a href="/">
                                         ANA SAYFA
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent.html">
+                                    <a href="komponent">
                                         KOMPONENTLER
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim.html">
+                                    <a href="iletisim">
                                         İLETİŞİM
                                     </a>
                                 </li>
@@ -158,17 +158,17 @@
                         <div class="heading-block">
                             <ul class="list-inline list--hover">
                                 <li>
-                                    <a href="index.html">
+                                    <a href="/">
                                         <span>Ana Sayfa</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent.html">
+                                    <a href="komponent">
                                         <span>Komponentler</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim.html">
+                                    <a href="iletisim">
                                         <span>İletişim</span>
                                     </a>
                                 </li>
