--- a/404.html
+++ b/404.html
@@ -1,10 +1,142 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="utf-8">
+    <title>Komponentler | BSigner</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bsigner'ın tarayıcı bağımsız ve kolay entegre edilebilir yapısı ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın.">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/flickity.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/jquery.steps.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    I'm 404
+    <div class="nav-container">
+        <div class="bar bar--sm visible-xs">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3 col-md-2 logo-div">
+                        <a href="/">
+                            <img class="logo logo-dark" alt="logo" src="img/logo.png">
+                        </a>
+                    </div>
+                    <div class="col-9 col-md-10 text-right">
+                        <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
+                            <i class="icon icon--sm stack-interface stack-menu"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav id="menu1" class="bar bar--sm bar-1 hidden-xs">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-1 col-md-2 hidden-xs">
+                        <div class="bar__module logo-div">
+                            <a href="/">
+                                <img class="logo logo-dark" alt="logo" src="img/logo.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
+                        <div class="bar__module">
+                            <ul class="menu-horizontal text-left">
+                                <li>
+                                    <a href="/">
+                                        ANA SAYFA
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="komponent">
+                                        KOMPONENTLER
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="iletisim">
+                                        İLETİŞİM
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="main-container">
+        <section class="height-100 bg--dark text-center">
+            <div class="container pos-vertical-center">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 class="h1--large">404</h1>
+                        <p class="lead">
+                            Baktığınız sayfa bulunamadı.
+                        </p>
+                        <a href="/">Anasayfaya geri dön</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="text-center space--sm footer-5 bg--dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="heading-block">
+                            <ul class="list-inline list--hover">
+                                <li>
+                                    <a href="/">
+                                        <span>Ana Sayfa</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="komponent">
+                                        <span>Komponentler</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="iletisim">
+                                        <span>İletişim</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span class="type--fine-print">
+                                ©
+                                <span class="update-year">2019</span> Bsigner
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <a class="back-to-top inner-link" href="#start" data-scroll-class="100vh:active">
+        <i class="stack-interface stack-up-open-big"></i>
+    </a>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/flickity.min.js"></script>
+    <script src="js/easypiechart.min.js"></script>
+    <script src="js/parallax.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/datepicker.js"></script>
+    <script src="js/isotope.min.js"></script>
+    <script src="js/ytplayer.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/granim.min.js"></script>
+    <script src="js/jquery.steps.min.js"></script>
+    <script src="js/countdown.min.js"></script>
+    <script src="js/twitterfetcher.min.js"></script>
+    <script src="js/spectragram.min.js"></script>
+    <script src="js/smooth-scroll.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
