Component button color is changed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <p class="lead">
                             Bsigner tarayıcı bağımsız, kolay entegre edilebilir bir imzalama çözümü sunar.
                         </p>
-                        <a class="btn btn--primary type--uppercase" href="komponent">
+                        <a class="btn btn-secondary type--uppercase" href="komponent">
                             <span class="btn__text">
                                 Komponentler
                             </span>
