Bsigner to BSigner text changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Anasayfa | BSigner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bsigner'ın tarayıcı bağımsız ve kolay entegre edilebilir yapısı ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın.">
+    <meta name="description" content="BSigner'ın tarayıcı bağımsız ve kolay entegre edilebilir yapısı ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -80,10 +80,10 @@
                 <div class="row">
                     <div class="col-md-8 col-lg-7">
                         <h1>
-                            Bsigner ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın
+                            BSigner ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın
                         </h1>
                         <p class="lead">
-                            Bsigner tarayıcı bağımsız, kolay entegre edilebilir bir imzalama çözümü sunar.
+                            BSigner tarayıcı bağımsız, kolay entegre edilebilir bir imzalama çözümü sunar.
                         </p>
                         <a class="btn btn-secondary type--uppercase" href="komponent">
                             <span class="btn__text">
@@ -151,7 +151,7 @@
                             <div class="feature__body">
                                 <h5>Mevzuat Uyumlu</h5>
                                 <p>
-                                    Bsigner tüm imzalama işlemlerini 5070 sayılı Elektronik İmza Kanunu'na uyumlu şekilde gerçekleştirmektedir.
+                                    BSigner tüm imzalama işlemlerini 5070 sayılı Elektronik İmza Kanunu'na uyumlu şekilde gerçekleştirmektedir.
                                 </p>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> Bsigner
+                                <span class="update-year">2019</span> BSigner
                             </span>
                         </div>
                     </div>
