--- a/404.html
+++ b/404.html
@@ -111,7 +111,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> Bsigner
+                                <span class="update-year">2019</span> BSigner
                             </span>
                         </div>
                     </div>
