--- a/iletisim.html
+++ b/iletisim.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>İletişim | BSigner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bsigner kurucusu: Berk Arslan, Email: iletisim@bsigner.com, Telefon: +90 555 470 92 82.">
+    <meta name="description" content="BSigner kurucusu: Berk Arslan, Email: iletisim@bsigner.com, Telefon: +90 555 470 92 82.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -116,7 +116,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> Bsigner
+                                <span class="update-year">2019</span> BSigner
                             </span>
                         </div>
                     </div>
