--- a/komponent.html
+++ b/komponent.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Komponentler | BSigner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bsigner; Desktop Client, JS API ve Server API gibi birçok farklı komponentten bir araya gelir.">
+    <meta name="description" content="BSigner; Desktop Client, JS API ve Server API gibi birçok farklı komponentten bir araya gelir.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -177,7 +177,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> Bsigner
+                                <span class="update-year">2019</span> BSigner
                             </span>
                         </div>
                     </div>
