--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 ﻿<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>Komponentler | BSigner</title>
+    <title>Not Found | Yakya Software</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sayfa bulunamadı.">
+    <meta name="description" content="Page not found.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -18,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
     <div class="nav-container">
         <div class="bar bar--sm visible-xs">
@@ -51,17 +53,17 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        ANA SAYFA
+                                        Homepage
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent">
-                                        KOMPONENTLER
+                                    <a href="services">
+                                        Services
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim">
-                                        İLETİŞİM
+                                    <a href="contact">
+                                        Contact
                                     </a>
                                 </li>
                             </ul>
@@ -76,11 +78,13 @@
             <div class="container pos-vertical-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="h1--large">404</h1>
+                        <h1 class="h1--large">404 - Not Found</h1>
                         <p class="lead">
-                            Baktığınız sayfa bulunamadı.
+                            Oops! It looks like you've taken a wrong turn. The page you're looking for might have been
+                            moved, had its name changed, or is temporarily unavailable. Please double-check the URL or
+                            return to our homepage to explore more.
                         </p>
-                        <a href="/">Anasayfaya geri dön</a>
+                        <a href="/">Return the homepage</a>
                     </div>
                 </div>
             </div>
@@ -93,17 +97,17 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        <span>Ana Sayfa</span>
+                                        Homepage
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent">
-                                        <span>Komponentler</span>
+                                    <a href="services">
+                                        Services
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim">
-                                        <span>İletişim</span>
+                                    <a href="contact">
+                                        Contact
                                     </a>
                                 </li>
                             </ul>
@@ -111,7 +115,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> BSigner
+                                <span class="update-year">2023</span> Yakya Software LLC. All Rights Reserved.
                             </span>
                         </div>
                     </div>
@@ -139,4 +143,5 @@
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
