--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 ﻿<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>İletişim | BSigner</title>
+    <title>Contact | Yakya Software</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="BSigner kurucusu: Berk Arslan, Email: iletisim@bsigner.com, Telefon: +90 555 470 92 82.">
+    <meta name="description" content="Get in touch with us today. Whether you're ready to start a project or need support for your existing projects, we're here to assist you. Reach out for personalized solutions that align with your business goals.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -18,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
     <div class="nav-container">
         <div class="bar bar--sm visible-xs">
@@ -51,17 +53,17 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        ANA SAYFA
+                                        Homepage
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent">
-                                        KOMPONENTLER
+                                    <a href="services">
+                                        Services
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim">
-                                        İLETİŞİM
+                                    <a href="contact">
+                                        Contact
                                     </a>
                                 </li>
                             </ul>
@@ -72,19 +74,38 @@
         </nav>
     </div>
     <div class="main-container">
-        <section class="unpad">
-            <div class="map-container" data-maps-api-key="AIzaSyDizCi3k2lfT-Zp15Rpe65-goBj7Spi9pY" data-address="Workinton Next Level, Kızılırmak Mahallesi, 06510 Çankaya/Ankara" data-marker-title="BSigner" data-map-style="[{&quot;featureType&quot;:&quot;administrative&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;road&quot;,&quot;elementType&quot;:&quot;labels&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#84afa3&quot;},{&quot;lightness&quot;:52}]},{&quot;stylers&quot;:[{&quot;saturation&quot;:-17},{&quot;gamma&quot;:0.36}]},{&quot;featureType&quot;:&quot;transit.line&quot;,&quot;elementType&quot;:&quot;geometry&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#3f518c&quot;}]}]"></div>
+        <section class="cover height-60 imagebg text-center parallax" data-overlay="4">
+            <div class="background-image-holder" style="background: url(&quot;img/background-contact.jpg&quot;); opacity: 1;">
+                <img alt="background" src="img/background-contact.jpg">
+            </div>
         </section>
-        <section>
+        <section class="text-center bg--secondary">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-10 col-lg-8">
+                        <h2>Get in touch with us</h2>
+                        <p class="lead">
+                            We're excited to connect with you! Whether you have a project in mind, need support for your
+                            existing projects, questions about our services, or simply want to explore how we can
+                            collaborate, feel free to reach out. You can contact us through the provided email address
+                            or send us a letter to the address listed below.
+                        </p>
+                    </div>
+                </div>
+                <!--end of row-->
+            </div>
+            <!--end of container-->
+        </section>
+        <section class="text-center">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 col-12">
+                        <h3>30 N Gould St Ste N
+                            <br>Sheridan, WY 82801
+                        </h3>
                         <p class="lead">
-                            Adres: Workinton Next Level - Kızılırmak Mahallesi, 06510 Çankaya/Ankara
-                            <br>
-                            Email: <a href="#">iletisim@bsigner.com</a>
-                            <br>
-                            Telefon: +90 555 470 92 82
+                            Email:
+                            <a href="#">contact@yakyasoftware.com</a>
                         </p>
                     </div>
                 </div>
@@ -98,17 +119,17 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        <span>Ana Sayfa</span>
+                                        Homepage
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent">
-                                        <span>Komponentler</span>
+                                    <a href="services">
+                                        Services
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim">
-                                        <span>İletişim</span>
+                                    <a href="contact">
+                                        Contact
                                     </a>
                                 </li>
                             </ul>
@@ -116,7 +137,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> BSigner
+                                <span class="update-year">2023</span> Yakya Software LLC. All Rights Reserved.
                             </span>
                         </div>
                     </div>
@@ -144,4 +165,5 @@
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
