--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ﻿<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>Anasayfa | BSigner</title>
+    <title>Homepage | Yakya Software</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="BSigner'ın tarayıcı bağımsız ve kolay entegre edilebilir yapısı ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın.">
+    <meta name="description" content="Empowering corporations with tailored software solutions through dedicated expertise – Welcome to Yakya Software, your trusted partner in innovation.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -18,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
     <div class="nav-container">
         <div class="bar bar--sm visible-xs">
@@ -51,17 +53,17 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        ANA SAYFA
+                                        Homepage
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent">
-                                        KOMPONENTLER
+                                    <a href="services">
+                                        Services
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim">
-                                        İLETİŞİM
+                                    <a href="contact">
+                                        Contact
                                     </a>
                                 </li>
                             </ul>
@@ -73,21 +75,22 @@
     </div>
     <div class="main-container">
         <section class="cover height-80 imagebg text-center parallax" data-overlay="4">
-            <div class="background-image-holder" style="background: url(&quot;img/background.png&quot;); opacity: 1;">
-                <img alt="background" src="img/background.png">
+            <div class="background-image-holder" style="background: url(&quot;img/background.jpg&quot;); opacity: 1;">
+                <img alt="background" src="img/background.jpg">
             </div>
             <div class="container pos-vertical-center">
                 <div class="row">
                     <div class="col-md-8 col-lg-7">
                         <h1>
-                            BSigner ile dokümanlarınızı hızlı ve güvenli bir şekilde imzalayın
+                            Elevating Corporations Through Tailored Software Solutions
                         </h1>
                         <p class="lead">
-                            BSigner tarayıcı bağımsız, kolay entegre edilebilir bir imzalama çözümü sunar.
+                            Embracing an unwavering commitment to quality, we harness cutting-edge technology to propel
+                            your business towards a future brimming with growth and success
                         </p>
-                        <a class="btn btn-secondary type--uppercase" href="komponent">
+                        <a class="btn btn-secondary type--uppercase" href="services">
                             <span class="btn__text">
-                                Komponentler
+                                Services
                             </span>
                         </a>
                     </div>
@@ -99,22 +102,51 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
-                            <i class="icon icon-Laptop-Tablet icon--lg"></i>
+                            <i class="icon icon-Crown-2 icon--lg"></i>
                             <div class="feature__body">
-                                <h5>Tarayıcı Bağımsız</h5>
+                                <h5>Quality-Oriented</h5>
                                 <p>
-                                    BSigner herhangi bir tarayıcıya bağlı kalmaksızın hepsiyle (Internet Explorer, Google Chrome, Firefox, Opera, Safari ve diğerleri) uyumlu çalışabilmektedir.
+                                    Our commitment to unwavering quality ensures that each solution we provide is a
+                                    dependable foundation for your corporate success.
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
-                            <i class="icon icon-Puzzle icon--lg"></i>
+                            <i class="icon icon-Timer-2 icon--lg"></i>
                             <div class="feature__body">
-                                <h5>Kolay Entegrasyon</h5>
+                                <h5>Productivity-Focused</h5>
                                 <p>
-                                    BSigner modülerliği ve farklı komponentleri sayesinde kolay entegre edilebilir bir yapı sunar, sizi entegrasyon süreçleri ve dokümanları ile uğraştırmaz.
+                                    Harnessing a productivity-driven approach, we expedite software development,
+                                    delivering solutions that swiftly elevate your business's capabilities and growth
+                                    trajectory.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Arrow-Mix icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Tailored Approach</h5>
+                                <p>
+                                    Embracing your unique vision, we design and develop custom software solutions that
+                                    perfectly align with your project's distinct requirements.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
+                            <i class="icon icon-Light-Bulb icon--lg"></i>
+                            <div class="feature__body">
+                                <h5>Innovating Futures</h5>
+                                <p>
+                                    Guided by innovation, we create software solutions that propel your business into a
+                                    future of growth, efficiency, and endless possibilities.
                                 </p>
                             </div>
                         </div>
@@ -125,33 +157,22 @@
                         <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
                             <i class="icon icon-Lock icon--lg"></i>
                             <div class="feature__body">
-                                <h5>Güvenli</h5>
+                                <h5>Secure</h5>
                                 <p>
-                                    BSigner dokümanlarınızı herhangi bir güvenlik zafiyeti oluşturmayacak şekilde imzalayarak size en güvenilir hizmeti sunar.
+                                    In every line of code, we prioritize your data's security, ensuring that our
+                                    software solutions are fortified shields against modern digital threats.
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
-                            <i class="icon icon-Timer-2 icon--lg"></i>
+                            <i class="icon icon-Like icon--lg"></i>
                             <div class="feature__body">
-                                <h5>Hızlı</h5>
+                                <h5>Continuous Excellence</h5>
                                 <p>
-                                    BSigner en güncel teknoloji altyapılarını kullanarak dokümanlarınızı olabilecek en hızlı şekilde imzalar.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <div class="feature feature--featured feature-5 boxed boxed--lg boxed--border">
-                            <i class="icon icon-Letter-Open icon--lg"></i>
-                            <div class="feature__body">
-                                <h5>Mevzuat Uyumlu</h5>
-                                <p>
-                                    BSigner tüm imzalama işlemlerini 5070 sayılı Elektronik İmza Kanunu'na uyumlu şekilde gerçekleştirmektedir.
+                                    From the initial idea to ongoing support, we're dedicated to achieving excellence at
+                                    every stage of your project's lifecycle, ensuring sustained success.
                                 </p>
                             </div>
                         </div>
@@ -167,17 +188,17 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        <span>Ana Sayfa</span>
+                                        <span>Homepage</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="komponent">
-                                        <span>Komponentler</span>
+                                    <a href="services">
+                                        <span>Services</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="iletisim">
-                                        <span>İletişim</span>
+                                    <a href="contact">
+                                        <span>Contact</span>
                                     </a>
                                 </li>
                             </ul>
@@ -185,7 +206,7 @@
                         <div>
                             <span class="type--fine-print">
                                 ©
-                                <span class="update-year">2019</span> BSigner
+                                <span class="update-year">2023</span> Yakya Software LLC. All Rights Reserved.
                             </span>
                         </div>
                     </div>
@@ -213,4 +234,5 @@
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
