Changed home string

--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
@@ -84,7 +84,7 @@
                             moved, had its name changed, or is temporarily unavailable. Please double-check the URL or
                             return to our homepage to explore more.
                         </p>
-                        <a href="/">Return the homepage</a>
+                        <a href="/">Return the home</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
