--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
@@ -119,7 +119,7 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
