--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Homepage | Yakya Software</title>
+    <title>Home | Yakya Software</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Empowering corporations with tailored software solutions through dedicated expertise – Welcome to Yakya Software, your trusted partner in innovation.">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
@@ -53,7 +53,7 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
@@ -188,7 +188,7 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        <span>Homepage</span>
+                                        <span>Home</span>
                                     </a>
                                 </li>
                                 <li>
