--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
                             <ul class="menu-horizontal text-left">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
@@ -266,7 +266,7 @@
                             <ul class="list-inline list--hover">
                                 <li>
                                     <a href="/">
-                                        Homepage
+                                        Home
                                     </a>
                                 </li>
                                 <li>
