--- a/404.html
+++ b/404.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <a id="start" data-scroll-id="start" tabindex="-1" style="outline: none;"></a>
     <div class="nav-container">
         <div class="bar bar--sm visible-xs">
             <div class="container">
