--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                         </h3>
                         <p class="lead">
                             Email:
-                            <a href="#">contact@yakyasoftware.com</a>
+                            <a href="mailto:contact@yakyasoftware.com">contact@yakyasoftware.com</a>
                         </p>
                     </div>
                 </div>
